@@ -34,6 +34,7 @@ Version 1.7.5+svn:
    * In attack dialog, split damages and chance to hit and color the later.
    * Disable the Remove and Update add-ons buttons when there are no add-ons
      installed.
+   * Add a Description button to the add-ons download dialog
 
 
 Version 1.7.5:
