@@ -41,6 +41,7 @@ Version 1.7.5+svn:
    * In attack dialog, split damages and chance to hit and color the later.
    * The Remove and Update add-ons options are disabled when there are no
      add-ons installed
+   * Add a Description button to the add-ons downloader
  * WML engine:
    * Fix silent=yes for objectives
    * Allow [story] [part] blocks to specify the title box alignment
